--- a/src/index.css
+++ b/src/index.css
@@ -12,5 +12,20 @@ body{
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    background-color: #101318;
     
 }
+.dark body {
+    background-color: #101318;
+    
+}
+.light body {
+    background-color: #fff;
+   
+}
+
+
+
+
+
+
